--- a/src/app/add/add.component.html
+++ b/src/app/add/add.component.html
@@ -1,10 +1,13 @@
 <section class="datatable">
   <button type="button" class="btn btn-primary" (click)="showAddBookForm()" >Add a book</button>
   <form [formGroup]="myFormModel" class = "add" method="post" [hidden]="isHidden">
-    <fieldset class="input">
+    <fieldset class="col-10">
       <label class="input label">Book title</label>
       <input  type="text" name="title" placeholder="Insert a Book title" required formControlName="titleInput">
     </fieldset>
+    <div class = "col-10" *ngIf="error?.title">
+      <span class="text text-danger">{{error.title}}</span>
+    </div>
 
     <fieldset class="input">
 
@@ -60,10 +63,13 @@
       <button type="button" class="btn btn-outline-primary" (click)="addNextBooksTag()">Add a next Book Tag</button>
     </fieldset>
 
-    <fieldset class="input">
+    <fieldset class="col-10">
       <label class="input label">Year publication</label>
       <input type="number" name="yearOfPublication;" placeholder="Insert a Year publication" required formControlName="yearOfPublicationInput">
     </fieldset>
+    <div class = "col-10" *ngIf="error?.yearOfPublication">
+        <span class="text text-danger">{{error.yearOfPublication}}</span>
+      </div>
 
     <fieldset class="input">
       <label class="input label">Book signature</label>
