--- a/src/app/add/add.component.html
+++ b/src/app/add/add.component.html
@@ -1,13 +1,13 @@
 <section class="datatable">
   <button type="button" class="btn btn-primary" (click)="showAddBookForm()" >Add a book</button>
-  <form [formGroup]="myFormModel" class = "add" method="post" [hidden]="isHidden">
-    <fieldset class="col-10">
-      <label class="input label">Book title</label>
-      <input  type="text" name="title" placeholder="Insert a Book title" required formControlName="titleInput">
-    </fieldset>
-    <div class = "col-10" *ngIf="error?.title">
-      <span class="text text-danger">{{error.title}}</span>
+  <form [formGroup]="myFormModel" class="row g-3" method="post" [hidden]="isHidden">
+    <div class="col-md-6">
+      <label for="validationServer03" class="form-label">Book title</label>
+      <input type="text" class="form-control " id="validationServer03" placeholder="Insert a Book title" aria-describedby="validationServer03Feedback" required formControlName="titleInput">
+      <div id="validationServer03Feedback" class="invalid-feedback d-block" *ngIf="validationErrors?.title"> {{validationErrors?.title}}
     </div>
+    </div>
+
 
     <fieldset class="input">
 
@@ -67,8 +67,8 @@
       <label class="input label">Year publication</label>
       <input type="number" name="yearOfPublication;" placeholder="Insert a Year publication" required formControlName="yearOfPublicationInput">
     </fieldset>
-    <div class = "col-10" *ngIf="error?.yearOfPublication">
-        <span class="text text-danger">{{error.yearOfPublication}}</span>
+    <div class = "col-10" *ngIf="validationErrors !== null && validationErrors?.yearOfPublication">
+        <span class="text text-danger">{{validationErrors.yearOfPublication}}</span>
       </div>
 
     <fieldset class="input">
@@ -76,9 +76,12 @@
       <input type="text" name="bookSignature" placeholder="Insert a Book signature" required formControlName="signatureInput">
     </fieldset>
 
-    <div [hidden]="isHidden">
+    <div class = "col-12" [hidden]="isHidden">
       <button class="btn btn-primary" type="submit" (click)="saveBook()">Submit</button>
     </div>
 
   </form>
+
 </section>
+
+
