--- a/src/app/delete/delete.component.html
+++ b/src/app/delete/delete.component.html
@@ -1,5 +1,6 @@
 <section class="datatable">
-  <button type="submit" delete_button class= "delete_button" (click)="DeleteABook()">Delete a book</button>
+
+  <button type="button" class="btn btn-primary" (click)="deleteBook()">Delete book</button>
   <form class = "delete" method="delete" [hidden]="isHidden">
   </form>
 </section>
