--- a/src/app/update/update.component.html
+++ b/src/app/update/update.component.html
@@ -1,5 +1,5 @@
 <section class="datatable">
-  <button type="submit" change_button class= "change_button"(click)="ChangeABook()">Modify a book</button>
+  <button type="submit" change_button class= "change_button"(click)="ChangeABook()"></button>
 
   <form class = "put" method="put" [hidden]="isHidden">
     <fieldset class="input">
