--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -46,7 +46,7 @@
       <p>No books</p>
     </ng-template>
 
-    <app-add-book [bookslist]="bookslist"> </app-add-book>
+    <app-add-book> </app-add-book>
 
   </main>
 </div>
